# mrow

./: Cargo.toml  README-LUA.md  README-TOML.md  README.md  rust-toolchain.toml  rustfmt.toml  types.d.luau
assets/: mrow.toml
assets/include/: greetd.toml
assets/modules/: apps.toml  dev.toml  dots.toml  greetd.toml  hyprland.toml  pipewire.toml
assets/modules/dev/: rust.toml
assets/modules/dots/fish/: config.fish
examples/: mrow.toml
examples/lua/: mrow.luau
examples/lua/hosts/: nya.luau
examples/lua/modules/: term.luau
examples/toml/: mrow.toml
examples/toml/hosts/: nya.toml
examples/toml/modules/: java.toml  minecraft.toml  term.toml
src/: main.rs  mrow_lua.rs  mrow_toml.rs
