[package]
name = "mrow"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
composable-utils = "0.1.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
toml = "0.8.19"
