[package]
name = "mrow"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colog = "1.3"
dirs = "5.0"
log = "0.4"
miette = { version = "7.2", features = ["fancy"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
